css fix: moved z-index tweak, main->header, to avoid interfering w/ modals

--- a/ctsurvey/css/survey.css
+++ b/ctsurvey/css/survey.css
@@ -3,11 +3,8 @@
 }
 
 #ctheader {
+	z-index: -1;
 	height: initial;
-}
-
-#ctmain {
-	z-index: 100000;
 }
 
 .surveys {
